Changes for version 0.1 - released 2011/xx/yy

*General:

This is the first version to be based on the Pake build tool.

Advantages, compared to the yaml version:
. it does not depend on ANT anymore. This means it does not depend on java, either
. simpler bootstrap process: download a single php file, execute it
. out of the box support for sources on git repositories
. does not need python to generate html out of rst
. can generate md5 checksums on windows without the need for external tools

Other changes:
. the package.xml file is updated the same way as ezinfo.php is